--- a/app/src/main/res/layout/fragment_python_oop_3.xml
+++ b/app/src/main/res/layout/fragment_python_oop_3.xml
@@ -16,7 +16,7 @@
             android:id="@+id/p_Operators_Text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="INHERITANCE"
+            android:text="POLYMORPHISM"
             android:textColor="#000000"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -29,7 +29,7 @@
             android:id="@+id/P_Operators_Text03"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/Inheritance_python"
+            android:text="@string/Polymorphism_Python"
             android:textColor="#000000"
             android:textIsSelectable="false"
             android:textSize="18sp"
@@ -45,7 +45,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Attributes - Inheritance"
+            android:text="Attributes Polymorphism"
             android:textColor="#000000"
             android:textIsSelectable="false"
             android:textSize="20sp"
@@ -60,7 +60,7 @@
             android:id="@+id/conditiontextView4"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="attributes in inheritance refer to the variables or properties that are inherited by a subclass from its superclass. Inheritance is a fundamental concept in object-oriented programming (OOP) that allows a class (subclass) to inherit attributes and behaviors from another class (superclass)."
+            android:text="Attributes are variables defined within a class and can hold data associated with instances of that class or the class itself. Polymorphism, on the other hand, refers to the ability of objects to take on multiple forms and respond differently to the same method or function call."
             android:textColor="#000000"
             android:textIsSelectable="false"
             android:textSize="18sp"
@@ -75,7 +75,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Class Methods - Inheritance"
+            android:text="Constructors - Polymorphism"
             android:textColor="#000000"
             android:textIsSelectable="false"
             android:textSize="20sp"
@@ -90,7 +90,7 @@
             android:id="@+id/conditiontextView5"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Inheritance and class methods are strong ideas that enable the development of reusable code and hierarchical interactions between classes. In contrast to methods that are connected to a class instance, class methods are methods that are bound to the class itself. They can be accessed and called by using the class name, and subclasses can inherit them as well."
+            android:text="Constructors are not directly involved in polymorphism, which is the property that allows objects to assume different forms and behave differently in response to method or function calls. However, by allowing the construction of objects from several classes that have a common interface or inheritance structure, constructors can indirectly support polymorphism."
             android:textColor="#000000"
             android:textIsSelectable="false"
             android:textSize="18sp"
@@ -106,7 +106,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Constructors - Inheritance"
+            android:text="Modifiers - Polymorphism"
             android:textColor="#000000"
             android:textIsSelectable="false"
             android:textSize="20sp"
@@ -121,7 +121,7 @@
             android:id="@+id/conditiontextView9"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="One of the core ideas of object-oriented programming (OOP), inheritance, is a fundamental notion that is also supported by constructors in Python. Constructors in inheritance let child classes to add their own special properties while both inheriting and initializing data from their parent class."
+            android:text="There are no explicit access modifiers like in some other programming languages (e.g., public, private, protected). However, there are certain conventions and techniques that can be used to achieve a similar level of encapsulation and access control. Polymorphism, on the other hand, is a concept that refers to the ability of objects of different classes to be treated as objects of a common superclass."
             android:textColor="#000000"
             android:textIsSelectable="false"
             android:textSize="18sp"
@@ -131,35 +131,6 @@
             app:layout_constraintTop_toBottomOf="@+id/conditiontextView10"
             tools:ignore="TextSizeCheck,VisualLintLongText" />
 
-        <TextView
-            android:id="@+id/conditiontextView6"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="Modifiers -Inheritance"
-            android:textColor="#000000"
-            android:textIsSelectable="false"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
-            app:layout_constraintTop_toBottomOf="@+id/conditiontextView9"
-            tools:ignore="TextSizeCheck,VisualLintLongText" />
-
-        <TextView
-            android:id="@+id/conditiontextView7"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="Unlike some other languages, Python does not include particular keywords or modifiers (such public, private, or protected) for regulating access. When working with inheritance, there are a few patterns and techniques that can be applied to get similar results."
-            android:textColor="#000000"
-            android:textIsSelectable="false"
-            android:textSize="18sp"
-            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
-            app:layout_constraintTop_toBottomOf="@+id/conditiontextView6"
-            tools:ignore="TextSizeCheck,VisualLintLongText" />
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_vertical1"
             android:layout_width="wrap_content"
