--- a/app/src/main/res/layout/fragment_python_oop_4.xml
+++ b/app/src/main/res/layout/fragment_python_oop_4.xml
@@ -16,7 +16,7 @@
             android:id="@+id/p_Operators_Text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="INHERITANCE"
+            android:text="ABSTRACTION"
             android:textColor="#000000"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -29,7 +29,7 @@
             android:id="@+id/P_Operators_Text03"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/Inheritance_python"
+            android:text="@string/poly_python"
             android:textColor="#000000"
             android:textIsSelectable="false"
             android:textSize="18sp"
@@ -45,7 +45,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Attributes - Inheritance"
+            android:text="Attributes - Abstraction  "
             android:textColor="#000000"
             android:textIsSelectable="false"
             android:textSize="20sp"
@@ -60,7 +60,7 @@
             android:id="@+id/conditiontextView4"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="attributes in inheritance refer to the variables or properties that are inherited by a subclass from its superclass. Inheritance is a fundamental concept in object-oriented programming (OOP) that allows a class (subclass) to inherit attributes and behaviors from another class (superclass)."
+            android:text="Abstraction is one of the core ideas of object-oriented programming (OOP), and characteristics play a part in it. Abstraction is the representation of an object's fundamental properties while concealing extraneous details. Python classes' attributes let us define and control object-related data."
             android:textColor="#000000"
             android:textIsSelectable="false"
             android:textSize="18sp"
@@ -75,7 +75,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Class Methods - Inheritance"
+            android:text="Constructors - Abstraction"
             android:textColor="#000000"
             android:textIsSelectable="false"
             android:textSize="20sp"
@@ -90,7 +90,7 @@
             android:id="@+id/conditiontextView5"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Inheritance and class methods are strong ideas that enable the development of reusable code and hierarchical interactions between classes. In contrast to methods that are connected to a class instance, class methods are methods that are bound to the class itself. They can be accessed and called by using the class name, and subclasses can inherit them as well."
+            android:text="Constructors are special methods used to initialize objects of a class. While Python doesn't have explicit constructor methods like some other programming languages, we can achieve the same functionality using the __init__() method. Constructors play a role in abstraction, which is one of the fundamental principles of object-oriented programming (OOP)."
             android:textColor="#000000"
             android:textIsSelectable="false"
             android:textSize="18sp"
@@ -106,7 +106,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Constructors - Inheritance"
+            android:text="Modifiers - Abstraction"
             android:textColor="#000000"
             android:textIsSelectable="false"
             android:textSize="20sp"
@@ -121,45 +121,18 @@
             android:id="@+id/conditiontextView9"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="One of the core ideas of object-oriented programming (OOP), inheritance, is a fundamental notion that is also supported by constructors in Python. Constructors in inheritance let child classes to add their own special properties while both inheriting and initializing data from their parent class."
+            android:text="Unlike several other programming languages, there are no explicit access modifiers like public, private, or protected. However, by using naming conventions and documentation to denote the intended visibility of properties and methods, we can achieve a certain level of abstraction."
             android:textColor="#000000"
             android:textIsSelectable="false"
             android:textSize="18sp"
+            app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal2"
             app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
             app:layout_constraintTop_toBottomOf="@+id/conditiontextView10"
+            app:layout_constraintVertical_bias="0.0"
             tools:ignore="TextSizeCheck,VisualLintLongText" />
 
-        <TextView
-            android:id="@+id/conditiontextView6"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="Modifiers -Inheritance"
-            android:textColor="#000000"
-            android:textIsSelectable="false"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
-            app:layout_constraintTop_toBottomOf="@+id/conditiontextView9"
-            tools:ignore="TextSizeCheck,VisualLintLongText" />
-
-        <TextView
-            android:id="@+id/conditiontextView7"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="Unlike some other languages, Python does not include particular keywords or modifiers (such public, private, or protected) for regulating access. When working with inheritance, there are a few patterns and techniques that can be applied to get similar results."
-            android:textColor="#000000"
-            android:textIsSelectable="false"
-            android:textSize="18sp"
-            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
-            app:layout_constraintTop_toBottomOf="@+id/conditiontextView6"
-            tools:ignore="TextSizeCheck,VisualLintLongText" />
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_vertical1"
             android:layout_width="wrap_content"
