done python with other missing questions

--- a/app/src/main/res/layout/fragment_python_looping_statement_6.xml
+++ b/app/src/main/res/layout/fragment_python_looping_statement_6.xml
@@ -43,7 +43,7 @@
                 android:id="@+id/P_loop_btnQ1"
                 android:layout_width="271dp"
                 android:layout_height="wrap_content"
-                android:text="[add here]"
+                android:text="Can I loop through a range of numbers in Python?"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
                 android:textStyle="bold"
@@ -58,7 +58,7 @@
                 android:id="@+id/P_loop_btnQ2"
                 android:layout_width="271dp"
                 android:layout_height="wrap_content"
-                android:text="[add here]"
+                android:text="What is the purpose of the &quot;range()&quot; function in a &quot;for&quot; loop?"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
                 android:textStyle="bold"
@@ -75,7 +75,7 @@
                 android:layout_width="271dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="68dp"
-                android:text="[add here]"
+                android:text="How do I stop or exit a loop prematurely?"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
                 android:textStyle="bold"
