--- a/app/src/main/res/layout/activity_python_language.xml
+++ b/app/src/main/res/layout/activity_python_language.xml
@@ -44,13 +44,13 @@
                 android:backgroundTint="#FFFFFF"
                 android:includeFontPadding="true"
                 android:paddingLeft="0dp"
-                android:paddingTop="0dp"
+                android:paddingTop="10dp"
                 android:paddingRight="0dp"
                 android:paddingBottom="0dp"
                 android:text="@string/_1_introduction"
                 android:textColor="#000000"
                 app:cornerRadius="10dp"
-                app:icon="@drawable/java_icon"
+                app:icon="@drawable/python_icon"
                 app:iconGravity="top"
                 app:iconPadding="0dp"
                 app:iconSize="40dp"
@@ -70,14 +70,14 @@
                 android:layout_marginTop="8dp"
                 android:backgroundTint="#FFFFFF"
                 android:paddingLeft="0dp"
-                android:paddingTop="0dp"
+                android:paddingTop="10dp"
                 android:paddingRight="0dp"
                 android:paddingBottom="0dp"
                 android:shadowColor="#000000"
                 android:text="@string/_4_variables"
                 android:textColor="#000000"
                 app:cornerRadius="10dp"
-                app:icon="@drawable/java_icon"
+                app:icon="@drawable/python_icon"
                 app:iconGravity="top"
                 app:iconPadding="0dp"
                 app:iconSize="40dp"
@@ -97,14 +97,14 @@
                 android:layout_marginTop="8dp"
                 android:backgroundTint="#FFFFFF"
                 android:paddingLeft="0dp"
-                android:paddingTop="0dp"
+                android:paddingTop="10dp"
                 android:paddingRight="0dp"
                 android:paddingBottom="0dp"
                 android:shadowColor="#000000"
                 android:text="@string/_3_comments"
                 android:textColor="#000000"
                 app:cornerRadius="10dp"
-                app:icon="@drawable/java_icon"
+                app:icon="@drawable/python_icon"
                 app:iconGravity="top"
                 app:iconPadding="0dp"
                 app:iconSize="40dp"
@@ -124,14 +124,14 @@
                 android:layout_marginTop="8dp"
                 android:backgroundTint="#FFFFFF"
                 android:paddingLeft="0dp"
-                android:paddingTop="0dp"
+                android:paddingTop="10dp"
                 android:paddingRight="0dp"
                 android:paddingBottom="0dp"
                 android:shadowColor="#000000"
                 android:text="@string/_5_inputs"
                 android:textColor="#000000"
                 app:cornerRadius="10dp"
-                app:icon="@drawable/java_icon"
+                app:icon="@drawable/python_icon"
                 app:iconGravity="top"
                 app:iconPadding="0dp"
                 app:iconSize="40dp"
@@ -151,14 +151,14 @@
                 android:layout_marginTop="8dp"
                 android:backgroundTint="#FFFFFF"
                 android:paddingLeft="0dp"
-                android:paddingTop="0dp"
+                android:paddingTop="10dp"
                 android:paddingRight="0dp"
                 android:paddingBottom="0dp"
                 android:shadowColor="#000000"
                 android:text="@string/_6_data_types"
                 android:textColor="#000000"
                 app:cornerRadius="10dp"
-                app:icon="@drawable/java_icon"
+                app:icon="@drawable/python_icon"
                 app:iconGravity="top"
                 app:iconPadding="0dp"
                 app:iconSize="40dp"
@@ -178,14 +178,14 @@
                 android:layout_marginTop="8dp"
                 android:backgroundTint="#FFFFFF"
                 android:paddingLeft="0dp"
-                android:paddingTop="0dp"
+                android:paddingTop="10dp"
                 android:paddingRight="0dp"
                 android:paddingBottom="0dp"
                 android:shadowColor="#000000"
                 android:text="@string/_8_conditional_statements"
                 android:textColor="#000000"
                 app:cornerRadius="10dp"
-                app:icon="@drawable/java_icon"
+                app:icon="@drawable/python_icon"
                 app:iconGravity="top"
                 app:iconPadding="0dp"
                 app:iconSize="40dp"
@@ -205,14 +205,14 @@
                 android:layout_marginTop="8dp"
                 android:backgroundTint="#FFFFFF"
                 android:paddingLeft="0dp"
-                android:paddingTop="0dp"
+                android:paddingTop="10dp"
                 android:paddingRight="0dp"
                 android:paddingBottom="0dp"
                 android:shadowColor="#000000"
                 android:text="@string/_7_operators"
                 android:textColor="#000000"
                 app:cornerRadius="10dp"
-                app:icon="@drawable/java_icon"
+                app:icon="@drawable/python_icon"
                 app:iconGravity="top"
                 app:iconPadding="0dp"
                 app:iconSize="40dp"
@@ -232,14 +232,14 @@
                 android:layout_marginTop="8dp"
                 android:backgroundTint="#FFFFFF"
                 android:paddingLeft="0dp"
-                android:paddingTop="0dp"
+                android:paddingTop="10dp"
                 android:paddingRight="0dp"
                 android:paddingBottom="0dp"
                 android:shadowColor="#000000"
                 android:text="@string/_9_looping_statements"
                 android:textColor="#000000"
                 app:cornerRadius="10dp"
-                app:icon="@drawable/java_icon"
+                app:icon="@drawable/python_icon"
                 app:iconGravity="top"
                 app:iconPadding="0dp"
                 app:iconSize="40dp"
@@ -259,14 +259,14 @@
                 android:layout_marginTop="8dp"
                 android:backgroundTint="#FFFFFF"
                 android:paddingLeft="0dp"
-                android:paddingTop="0dp"
+                android:paddingTop="10dp"
                 android:paddingRight="0dp"
                 android:paddingBottom="0dp"
                 android:shadowColor="#000000"
                 android:text="@string/_10_arrays"
                 android:textColor="#000000"
                 app:cornerRadius="10dp"
-                app:icon="@drawable/java_icon"
+                app:icon="@drawable/python_icon"
                 app:iconGravity="top"
                 app:iconPadding="0dp"
                 app:iconSize="40dp"
@@ -287,14 +287,14 @@
                 android:layout_marginBottom="8dp"
                 android:backgroundTint="#FFFFFF"
                 android:paddingLeft="0dp"
-                android:paddingTop="0dp"
+                android:paddingTop="10dp"
                 android:paddingRight="0dp"
                 android:paddingBottom="0dp"
                 android:shadowColor="#000000"
                 android:text="11. OOP"
                 android:textColor="#000000"
                 app:cornerRadius="10dp"
-                app:icon="@drawable/java_icon"
+                app:icon="@drawable/python_icon"
                 app:iconGravity="top"
                 app:iconPadding="0dp"
                 app:iconSize="40dp"
@@ -314,14 +314,14 @@
                 android:layout_height="80dp"
                 android:backgroundTint="#FFFFFF"
                 android:paddingLeft="0dp"
-                android:paddingTop="0dp"
+                android:paddingTop="10dp"
                 android:paddingRight="0dp"
                 android:paddingBottom="0dp"
                 android:shadowColor="#000000"
                 android:text="@string/_2_syntax"
                 android:textColor="#000000"
                 app:cornerRadius="10dp"
-                app:icon="@drawable/java_icon"
+                app:icon="@drawable/python_icon"
                 app:iconGravity="top"
                 app:iconPadding="0dp"
                 app:iconSize="40dp"
